setup - initial template
Tried to put the Game screens together into the main navigator. Created a basic  nav bar and navigation stack

--- a/Frontend/TrekReact/app.json
+++ b/Frontend/TrekReact/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "destinationSelect",
-    "slug": "destinationSelect",
+    "name": "TrekReact",
+    "slug": "TrekReact",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
