--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "destinationselect",
+  "name": "trekreact",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,7 +12,9 @@
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
