--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -31,7 +31,8 @@
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-snackbar": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
