--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.1.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
-    "expo": "~50.0.6",
+    "expo": "~50.0.11",
     "expo-constants": "~15.4.5",
     "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
@@ -26,16 +26,19 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
-    "react-native-reanimated": "^3.7.1",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snackbar": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-optional-catch-binding": "^7.23.4"
   },
   "private": true
 }
