--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^8.2.0",
+    "crypto": "^1.0.1",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
