--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.1.0",
-    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.10",
@@ -26,7 +25,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
@@ -35,10 +34,13 @@
     "react-native-snackbar": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-class-properties": "^7.23.3",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
-    "@babel/plugin-transform-optional-catch-binding": "^7.23.4"
+    "@babel/plugin-transform-async-generator-functions": "7.23.9",
+    "@babel/plugin-transform-class-properties": "7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "7.23.4",
+    "@babel/plugin-transform-numeric-separator": "7.23.4",
+    "@babel/plugin-transform-object-rest-spread": "7.24.0",
+    "@babel/plugin-transform-optional-catch-binding": "7.23.4",
+    "@babel/plugin-transform-optional-chaining": "7.23.4"
   },
   "private": true
 }
