--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
