--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -20,6 +20,7 @@
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
     "expo-location": "~16.5.3",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
