--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -37,13 +37,13 @@
     "react-native-snackbar": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-async-generator-functions": "7.23.9",
-    "@babel/plugin-transform-class-properties": "7.23.3",
-    "@babel/plugin-transform-nullish-coalescing-operator": "7.23.4",
-    "@babel/plugin-transform-numeric-separator": "7.23.4",
-    "@babel/plugin-transform-object-rest-spread": "7.24.0",
-    "@babel/plugin-transform-optional-catch-binding": "7.23.4",
-    "@babel/plugin-transform-optional-chaining": "7.23.4"
+    "@babel/plugin-transform-async-generator-functions": "",
+    "@babel/plugin-transform-class-properties": "",
+    "@babel/plugin-transform-nullish-coalescing-operator": "",
+    "@babel/plugin-transform-numeric-separator": "",
+    "@babel/plugin-transform-object-rest-spread": "",
+    "@babel/plugin-transform-optional-catch-binding": "",
+    "@babel/plugin-transform-optional-chaining": ""
   },
   "private": true
 }
