--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -27,7 +27,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "2.14.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
