--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -34,7 +34,8 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-snackbar": "^2.6.2"
+    "react-native-snackbar": "^2.6.2",
+    "expo-camera": "~14.1.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-async-generator-functions": "",
