--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-picker/picker": "^2.6.1",
@@ -16,8 +17,10 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.21",
+    "AsyncStorage": "^0.1.5",
     "axios": "^1.6.8",
     "expo": "~50.0.13",
+    "expo-camera": "~14.1.1",
     "expo-constants": "~15.4.5",
     "expo-location": "~16.5.3",
     "expo-permissions": "^14.4.0",
@@ -34,8 +37,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-snackbar": "^2.6.2",
-    "expo-camera": "~14.1.1"
+    "react-native-snackbar": "^2.6.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-async-generator-functions": "",
