--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^8.2.2",
     "node": "^21.7.1",
     "nodemailer": "^6.9.12",
+    "router": "^2.0.0-beta.2",
     "uuid": "^9.0.1"
   }
 }
