--- a/Frontend/TrekReact/package.json
+++ b/Frontend/TrekReact/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.19.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/geolocation": "^3.1.0",
@@ -18,8 +19,8 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.21",
     "AsyncStorage": "^0.1.5",
-    
     "axios": "^1.6.8",
+    "cloudinary-react-native": "^0.2.0",
     "expo": "~50.0.13",
     "expo-camera": "~14.1.1",
     "expo-constants": "~15.4.5",
